<resources>
    <string name="app_name">Tuim</string>
    <string name="TextToLogIn">Zaloguj się</string>
    <string name="logging">Logowanie</string>
    <string name="registering">Rejstracja</string>
    <string name="logInAndConfirm">Zaloguj się i potwierdz</string>
    <string name="give_login">Login</string>
    <string name="give_password">Haslo</string>
    <string name="Confirm">Potwierdz</string>
    <string name="main_menu">Menu głowne</string>
    <string name="your_points">Twoje punkty</string>
    <string name="new_gps">Znajdz stacje benzynowa</string>
    <string name="new_tank">Nowe tankowanie</string>
    <string name="new_car">Nowy samochód</string>
    <string name="new_repair">Nowa stacja benzynowa</string>
    <string name="log_in_form">Logowanie</string>
    <string name="enter_login">Wprowadz login</string>
    <string name="enter_password">Wprowadz haslo</string>
    <string name="login_or_passworrd_not_correct">Bledny login lub haslo</string>
    <string name="error_connection_with_server">Blad polaczenia z serwerem</string>
    <string name="register_form">Rejestracja</string>
    <string name="error">Blad!</string>
    <string name="you_have_to_accept_regulations">Akceptacja regulamianu jest wymagana</string>
    <string name="checkboxRegulations">Zatwierdzono</string>
    <string name="phone_number_is_necessary">Numer terlefonu jest wymagany</string>
    <string name="phone_number_only_nine_numbers">Numer telefonu wymaga 9 cyfr</string>
    <string name="give_phone_number">Podaj numer telefonu</string>
    <string name="email_is_necessary">Email jest wymagany</string>
    <string name="false_email">Niepoprawny mail</string>
    <string name="give_email">Podaj email</string>
    <string name="must_repeat_password">Prosze powtorzyc haslo</string>
    <string name="password_dont_match">Brak zgodanosci hasla</string>
    <string name="repeat_password">Powtorz haslo</string>
    <string name="password_is_necessary">Haslo jest wymagane</string>
    <string name="password_eight_signs_leter_number_special">Haslo musi zawierac coanajmniej 8 znaków, w tym znak specjalny litere i cyfre</string>
    <string name="login_is_necessary">Login jest wymagany</string>
    <string name="login_must_more_than_three_signs">Login musi zawiwerac wiecej niz 3 znaki</string>
    <string name="make">Marka</string>
    <string name="model">Model</string>
    <string name="color">Kolor</string>
    <string name="is_it_your_main_car">Czy to Twoje glowne auto?</string>
    <string name="color_demo">Kolor</string>
    <string name="model_demo">Model</string>
    <string name="make_demo">Marka</string>
    <string name="confirm_to_verifiaction">Potwierdz weyfikacje</string>
    <string name="get_points_for_editing">Otrzymaj punkty</string>
    <string name="new_price_lpg">Nowa cena gazu</string>
    <string name="new_price_on">Nowa cena disel</string>
    <string name="new_price_p95">Nowa cena benzyna</string>
    <string name="Hello">Dzien dobry</string>
    <string name="have_fun">:)</string>
    <string name="amount_of_your_points">Liczba punktow</string>
    <string name="nav_open">Otworz</string>
    <string name="nav_close">Zamknij</string>
    <string name="newTankUp">Nowe tankowanie</string>
    <string name="warning_no_liters">Napisz liczbe litrow</string>
    <string name="warning_liters_minus">Nie mozna wpisac liczby ujemnej</string>
    <string name="Amount_of_liters">Liczba litrow</string>
    <string name="warning_no_cost">Wprowadz cene</string>
    <string name="warning_cost_minus">Nie mozena wpisac liczby ujemnej</string>
    <string name="Fuel_cost">Koszt paliwa</string>
    <string name="warning_no_millage">Wprowadz przebieg</string>
    <string name="warning_millage_zero">Przebieg nie moze byc ujemny</string>
    <string name="przebieg">Przebieg</string>
    <string name="warning_millage_too_small">Zbyt maly przebieg</string>
    <string name="data">Data</string>
    <string name="date">Data</string>
    <string name="millage">Przebieg</string>
    <string name="liters">Litry</string>
    <string name="cost">Koszt</string>
    <string name="enter_p95">Wprowadz P95</string>
    <string name="p95_not_minus">Nie moze byc wartosc ujemna</string>
    <string name="enter_on">Wprowadz ON</string>
    <string name="on_not_minus">Nie moze byc wartosc ujemna</string>
    <string name="enter_lpg">Wprowadz LPG</string>
    <string name="lpg_not_minus">Nie moze byc watosc ujemna</string>
    <string name="you_get_ten_points">Dostajesz punkty</string>
    <string name="current_speed">Aktualna predkosc</string>
    <string name="last_best">Rekord</string>
    <string name="seconds">sekund</string>
    <string name="km_per_h">km na h</string>
    <string name="start_measurement">Rozpocznij pomiar</string>
    <string name="record_of_speed">Rekord szybkosci</string>
    <string name="Current_speed">Aktualna predkosc</string>
    <string name="google_maps_key">AIzaSyBKI2vWqQWkoADnfTSAyctOlrKM34x13iU</string>
    <string name="station_add_form">Dodawanie nowej stacji</string>
    <string name="enter_lat">Wprowadz dlugosc geograficzna!</string>
    <string name="lat">Dlugosc geograficzna</string>
    <string name="enter_lan">Wprowadz szerokosc geograficzna!</string>
    <string name="lan">Szerokosc geograficzna</string>
    <string name="name_is_necessary">Nazwa stacji jest wymagana</string>
    <string name="name_must_more_than_one_sign">Nazwa powinna zawierac powyzej jednego znaku</string>
    <string name="give_name">Nazwa stacji</string>
</resources>