<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="134dp">

        <TextView
            android:id="@+id/current_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="19sp"
            android:text="@string/Current_speed" />

        <TextView
            android:id="@+id/best_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="19sp"
            android:text="@string/record_of_speed" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_measurement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/start_measurement" />
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="@color/material_on_background_emphasis_medium"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/station_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="619dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:reverseLayout="false"/>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>